Java中的引用与GC分析